--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,39 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+body{
+  background-color: #F1F5F8;
+}
+.cursor{
+  cursor: pointer;
+}
+figure{
+  width: 150px;
+  height: 150px;
+}
+figure{
+  z-index: 999;
+  position: relative;
+ 
+}
+
+figure::after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: hsl(205, 78%, 60%);
+  left: 7%;
+  top: -7%;
+  z-index: -1;
+}
+figure i{
+  position: absolute;
+  top: -5%;
+  left: 0;
+  background-color: hsl(205, 78%, 60%);
+  padding: 0.6rem;
+
+}
